# challengr

./: Cargo.toml  README.md  justfile
examples/aoc2023/: Cargo.toml  README.md
examples/aoc2023/src/: cli.rs
examples/aoc2023/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
examples/aoc2024/: Cargo.toml
examples/aoc2024/src/: cli.rs  main.rs
examples/aoc2024/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  mod.rs
proliferatr/: Cargo.toml  README.md
proliferatr/src/: bound.rs  direction.rs  grid.rs  lib.rs  point.rs
proliferatr/src/generic/: int_list.rs  mod.rs  point_list.rs  token.rs
proliferatr/src/maze/: mod.rs
proliferatr/src/path/: closed_path.rs  mod.rs  path_condenser.rs  path_reflector.rs  path_scaler.rs  unit_segment_adder.rs
