[workspace]
resolver = "2"
members = [
    # "challengr-api",
    "proliferatr",

    # https://github.com/rust-lang/cargo/issues/7467#issuecomment-1162137096
    "examples/*",
]

[workspace.package]
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2021"
rust-version = "1.74.1"
license = "MIT"
repository = "https://github.com/mattcl/challengr-rs"

[workspace.dependencies]
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
derive_builder = "0.12.0"
itertools = "0.12.0"
nom = "7.1"
num = "0.4"
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
