[package]
name = "proliferatr"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
