[package]
name = "proliferatr"
version = "0.1.0"
description = "A collection of traits/structs to aid in generating input data for solution-oriented programming challenges."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
